[package]
name = "rb-forest"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "debuginfo"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
thiserror = "1.0.*"
parking_lot = { version = "0.12.*", features = ["nightly", "hardware-lock-elision", "deadlock_detection"] }

sorted-iter = { version = "0.1.*", optional = true }